# AI-Playground

./: .gitignore  Assistant.py  README.md  system_roles.json  test_llama_index.py
crewai/: poem.txt
crewai/personal_assistant/: README.md  poem.txt  pyproject.toml
crewai/personal_assistant/src/personal_assistant/: main.py  yf.py
crewai/personal_assistant/src/personal_assistant/crews/poem_crew/: poem_crew.py
crewai/personal_assistant/src/personal_assistant/crews/poem_crew/config/: agents.yaml  tasks.yaml
crewai/personal_assistant/src/personal_assistant/tools/: custom_tool.py
pydantic/: Assistant.py  Assitant.py  config.yaml  readme.md  requirements.txt  test.py  websearch.py
research_assistant/: README.md  pyproject.toml  report.md
research_assistant/src/research_assistant/: crew.py  main.py
research_assistant/src/research_assistant/config/: agents.yaml  tasks.yaml
