[project]
name = "research_assistant"
version = "0.1.0"
description = "research_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
research_assistant = "research_assistant.main:run"
run_crew = "research_assistant.main:run"
train = "research_assistant.main:train"
replay = "research_assistant.main:replay"
test = "research_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
