[project]
name = "personal_assistant"
version = "0.1.0"
description = "personal_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "personal_assistant.main:kickoff"
plot = "personal_assistant.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
